{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 273,
  "lineage": "6bf24f32-ee4d-dc4f-0cbf-21b68dfafbb8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "Day2_EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02c8478766a157f4b",
            "association_id": "eipassoc-08c9a82eae7c77abc",
            "domain": "vpc",
            "id": "eipalloc-02c8478766a157f4b",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0aad677e6959bc5bd",
            "private_dns": "ip-10-0-0-136.ap-south-1.compute.internal",
            "private_ip": "10.0.0.136",
            "public_dns": "ec2-13-200-185-120.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.200.185.120",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Day2_NAT_EIP"
            },
            "tags_all": {
              "Name": "Day2_NAT_EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "public_instance_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-040e0ca6dfeeee9af",
            "association_id": "eipassoc-0f45c0f1b8d81c84c",
            "domain": "vpc",
            "id": "eipalloc-040e0ca6dfeeee9af",
            "instance": "i-0d4c3268227f6606d",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0222f83b804abd8b0",
            "private_dns": "ip-10-0-0-7.ap-south-1.compute.internal",
            "private_ip": "10.0.0.7",
            "public_dns": "ec2-3-109-37-183.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.109.37.183",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.Day2_PUBS_Bastion_host",
            "aws_security_group.Day2_SG_SSH_BH",
            "aws_subnet.Day2_PUBS",
            "aws_vpc.Day2_VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Day2_PRIS_EC2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e670eb768a5fc3d4",
            "arn": "arn:aws:ec2:ap-south-1:549395784991:instance/i-083df668dbe401152",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-083df668dbe401152",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Project1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06f25c72897349f83",
            "private_dns": "ip-10-0-0-135.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.135",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0281166bbaa887ba7",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ac791fee36c84fbc",
            "tags": {
              "Name": "Day2_PRIS_EC2"
            },
            "tags_all": {
              "Name": "Day2_PRIS_EC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0df05cbfd005b922f"
            ]
          },
          "dependencies": [
            "aws_security_group.Day2_SG_SSH_BH",
            "aws_security_group.Day2_SG_SSH__FROM_BH",
            "aws_subnet.Day2_PRIS",
            "aws_vpc.Day2_VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Day2_PUBS_Bastion_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e670eb768a5fc3d4",
            "arn": "arn:aws:ec2:ap-south-1:549395784991:instance/i-0d4c3268227f6606d",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d4c3268227f6606d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Project1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0222f83b804abd8b0",
            "private_dns": "ip-10-0-0-7.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.7",
            "public_ip": "3.109.37.183",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0510567c61b9c7dad",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-043740a72fa1a6362",
            "tags": {
              "Name": "Day2_PUBS_Bastion_host"
            },
            "tags_all": {
              "Name": "Day2_PUBS_Bastion_host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-023079c494f699bc3"
            ]
          },
          "dependencies": [
            "aws_security_group.Day2_SG_SSH_BH",
            "aws_subnet.Day2_PUBS",
            "aws_vpc.Day2_VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Day2_IG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:549395784991:internet-gateway/igw-031f5d3666ff156a7",
            "id": "igw-031f5d3666ff156a7",
            "owner_id": "549395784991",
            "tags": {
              "Name": "Day2_IG"
            },
            "tags_all": {
              "Name": "Day2_IG"
            },
            "vpc_id": "vpc-02ae4fe7af63fb9e5"
          },
          "dependencies": [
            "aws_vpc.Day2_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "Day2_PRIS_NATGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02c8478766a157f4b",
            "association_id": "eipassoc-0b4dbfe4512773381",
            "connectivity_type": "public",
            "id": "nat-0678e88cfab8d707b",
            "network_interface_id": "eni-0bb0bdf06ce0b4657",
            "private_ip": "10.0.0.9",
            "public_ip": "13.200.185.120",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-043740a72fa1a6362",
            "tags": {
              "Name": "Day2_PRIS_NATGW"
            },
            "tags_all": {
              "Name": "Day2_PRIS_NATGW"
            }
          },
          "dependencies": [
            "aws_eip.Day2_EIP",
            "aws_subnet.Day2_PUBS",
            "aws_vpc.Day2_VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Day2_RT_IG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:549395784991:route-table/rtb-078d7f401e8a8deed",
            "id": "rtb-078d7f401e8a8deed",
            "owner_id": "549395784991",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-031f5d3666ff156a7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Day2_RT_IG"
            },
            "tags_all": {
              "Name": "Day2_RT_IG"
            },
            "timeouts": null,
            "vpc_id": "vpc-02ae4fe7af63fb9e5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Day2_IG",
            "aws_vpc.Day2_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Day2_RT_NAT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:549395784991:route-table/rtb-0c650410eef7d3c27",
            "id": "rtb-0c650410eef7d3c27",
            "owner_id": "549395784991",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0678e88cfab8d707b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Day2_RT_NAT"
            },
            "tags_all": {
              "Name": "Day2_RT_NAT"
            },
            "timeouts": null,
            "vpc_id": "vpc-02ae4fe7af63fb9e5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.Day2_EIP",
            "aws_nat_gateway.Day2_PRIS_NATGW",
            "aws_subnet.Day2_PUBS",
            "aws_vpc.Day2_VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Adding_to_Day2_PRIS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04385d0bd892c0fb7",
            "route_table_id": "rtb-0c650410eef7d3c27",
            "subnet_id": "subnet-0ac791fee36c84fbc"
          },
          "dependencies": [
            "aws_eip.Day2_EIP",
            "aws_nat_gateway.Day2_PRIS_NATGW",
            "aws_route_table.Day2_RT_NAT",
            "aws_subnet.Day2_PRIS",
            "aws_subnet.Day2_PUBS",
            "aws_vpc.Day2_VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Adding_to_Day2_PUBS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab7c0b4426be3c93",
            "route_table_id": "rtb-078d7f401e8a8deed",
            "subnet_id": "subnet-043740a72fa1a6362"
          },
          "dependencies": [
            "aws_internet_gateway.Day2_IG",
            "aws_route_table.Day2_RT_IG",
            "aws_subnet.Day2_PUBS",
            "aws_vpc.Day2_VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Day2_SG_SSH_BH",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:549395784991:security-group/sg-023079c494f699bc3",
            "description": "Allow ssh to bastion host as it is in Public subnet",
            "egress": [],
            "id": "sg-023079c494f699bc3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Allow ssh",
            "name_prefix": "",
            "owner_id": "549395784991",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02ae4fe7af63fb9e5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Day2_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Day2_SG_SSH__FROM_BH",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:549395784991:security-group/sg-0df05cbfd005b922f",
            "description": "Allow ssh from bastion host",
            "egress": [],
            "id": "sg-0df05cbfd005b922f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-023079c494f699bc3"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Allow ssh from bastion host",
            "name_prefix": "",
            "owner_id": "549395784991",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02ae4fe7af63fb9e5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.Day2_SG_SSH_BH",
            "aws_vpc.Day2_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Day2_PRIS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:549395784991:subnet/subnet-0ac791fee36c84fbc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.128/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ac791fee36c84fbc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "549395784991",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Day2_PRIS"
            },
            "tags_all": {
              "Name": "Day2_PRIS"
            },
            "vpc_id": "vpc-02ae4fe7af63fb9e5"
          },
          "dependencies": [
            "aws_vpc.Day2_VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Day2_PUBS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:549395784991:subnet/subnet-043740a72fa1a6362",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-043740a72fa1a6362",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "549395784991",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Day2_PUBS"
            },
            "tags_all": {
              "Name": "Day2_PUBS"
            },
            "vpc_id": "vpc-02ae4fe7af63fb9e5"
          },
          "dependencies": [
            "aws_vpc.Day2_VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Day2_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:549395784991:vpc/vpc-02ae4fe7af63fb9e5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-0e17ce3d3503be44f",
            "default_route_table_id": "rtb-036c00ac8724cc174",
            "default_security_group_id": "sg-0b50d8dd83f0fdc25",
            "dhcp_options_id": "dopt-013306c3265fdedcc",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02ae4fe7af63fb9e5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-036c00ac8724cc174",
            "owner_id": "549395784991",
            "tags": {
              "Name": "Day2_VPC"
            },
            "tags_all": {
              "Name": "Day2_VPC"
            }
          }
        }
      ]
    }
  ]
}